Updated the search logic to include title and content while searching. Updated the Annonations to include query params
